# JW_gamble

./: .gitignore  BETTING_STRATEGY.md  COMBINATION_BETTING_ANALYSIS.md  CRITICAL_FINDING.md  EDA_REPORT_FINAL.md  FINAL_ANALYSIS.md  MODELING_STRATEGY.md  MODEL_USAGE.md  README.md  UPDATE_NOTE.md  betting_strategy.py  debug_pdf.py  download_pdfs.js  eda.py  eda_train_only.py  evaluation.py  feature_engineering.py  fix_matplotlib_font.py  generate_eda_report.py  models.py  models_rule_based.py  package.json  parse_all_pdfs.py  parse_old_pdfs_batch.py  parse_pdf.py  parse_pdf_old_format.py  pyproject.toml  run_eda.py  test_eda.py  train.py  train_profitable.py
data/: feature_columns.json
eda_output/: EDA_REPORT.md
models/: feature_columns.json  feature_engineer.pkl  lightgbm.txt  logistic_baseline.pkl  logistic_regression.pkl  metrics.json  odds_baseline.pkl
models_profitable/: lgbm_model.pkl  profitability_results.json
scripts/: parse_pdf_complete.py
scripts/nodejs/: find_missing.js
